<resources>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="ad_choices" translatable="false">Ad Choices icon</string>
    <string name="ad_inspector" translatable="false">Ad Inspector</string>
    <string name="app_name" translatable="false">Ad Manager Native Advanced</string>
    <string name="more_menu" translatable="false">More</string>
    <string name="privacy_settings" translatable="false">Privacy Settings</string>
    <string name="refresh_ad" translatable="false">Refresh Ad</string>
    <string name="request_template" translatable="false">Request Custom Template Ads</string>
    <string name="request_unified" translatable="false">Request Unified Native Ads</string>
    <string name="start_muted" translatable="false">Start video ads muted</string>
    <string name="video_status" translatable="false">Video status: </string>
</resources>
